[package]
name = "sleep-on-lan"
version = "0.1.0"
authors = ["Arthur Hirata <arthur_hirata@yahoo.com.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 3

[dependencies]
regex = "1.4.2"
hex = "0.4.2"
structopt = "0.3.21"
